create some responsive related work

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,8 @@ input{
   margin-right: 5px;
   color:rgb(182, 104, 255);
 }
+#bgImgLogin{
+  background-image: url('https://c4.wallpaperflare.com/wallpaper/566/335/681/forest-firewatch-nature-digital-art-wallpaper-preview.jpg');
+  background-size: cover;
+  background-position: center;
+}
